Update application/src/main/java/org/opentripplanner/apis/transmodel/TransmodelGraphQLSchema.java
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>